--- a/VulkanDemo/ForwardRendering/ForwardRendering.vcxproj
+++ b/VulkanDemo/ForwardRendering/ForwardRendering.vcxproj
@@ -160,6 +160,10 @@
     <ClInclude Include="Renderer\VulkanRender.h" />
     <ClInclude Include="Renderer\VulkanUtil.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\shader.frag" />
+    <None Include="Shaders\shader.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
