--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\PhysicalDevice.cpp" />
     <ClCompile Include="Core\PhysicalDeviceSurface.cpp" />
+    <ClCompile Include="Core\Queue.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
     <ClCompile Include="Core\Surface.cpp" />
     <ClCompile Include="Core\Utils.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Core\Instance.h" />
     <ClInclude Include="Core\PhysicalDevice.h" />
     <ClInclude Include="Core\PhysicalDeviceSurface.h" />
+    <ClInclude Include="Core\Queue.h" />
     <ClInclude Include="Core\QueueFamily.h" />
     <ClInclude Include="Core\Surface.h" />
     <ClInclude Include="Core\UniqueHandle.h" />
