--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -151,10 +151,11 @@
     <ClCompile Include="Core\Device.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\PhysicalDevice.cpp" />
-    <ClCompile Include="Core\PhysicalDeviceSurface.cpp" />
+    <ClCompile Include="Core\SwapChainSupport.cpp" />
     <ClCompile Include="Core\Queue.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
     <ClCompile Include="Core\Surface.cpp" />
+    <ClCompile Include="Core\Swapchain.cpp" />
     <ClCompile Include="Core\Utils.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -168,11 +169,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Core\Swapchain.h" />
     <ClInclude Include="WindowApplication.h" />
     <ClInclude Include="Core\Device.h" />
     <ClInclude Include="Core\Instance.h" />
     <ClInclude Include="Core\PhysicalDevice.h" />
-    <ClInclude Include="Core\PhysicalDeviceSurface.h" />
+    <ClInclude Include="Core\SwapChainSupport.h" />
     <ClInclude Include="Core\Queue.h" />
     <ClInclude Include="Core\QueueFamily.h" />
     <ClInclude Include="Core\Surface.h" />
