test vulkan mem allocator dont work

--- a/VulkanDemo/VulkanDemo/VulkanDemo.vcxproj.filters
+++ b/VulkanDemo/VulkanDemo/VulkanDemo.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="impl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\shader.vert" />
