--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj.filters
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj.filters
@@ -78,7 +78,10 @@
     <ClCompile Include="Core\Image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Core\libHelper.cpp">
+    <ClCompile Include="libHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\ImageView.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Core\Image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\ImageView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
