--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\Pipeline.cpp" />
+    <ClCompile Include="Core\RenderPass.cpp" />
     <ClCompile Include="Core\Shader.cpp" />
     <ClCompile Include="Core\ShaderModule.cpp" />
     <ClCompile Include="libHelper.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Pipeline.h" />
+    <ClInclude Include="Core\RenderPass.h" />
     <ClInclude Include="Core\Shader.h" />
     <ClInclude Include="Core\ShaderModule.h" />
     <ClInclude Include="Core\Swapchain.h" />
