--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Core\Device.cpp" />
+    <ClCompile Include="Core\Framebuffer.cpp" />
     <ClCompile Include="Core\Image.cpp" />
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
@@ -177,6 +178,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Core\Framebuffer.h" />
     <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Pipeline.h" />
