--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -148,6 +148,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Core\CommandBuffers.cpp" />
+    <ClCompile Include="Core\CommandPool.cpp" />
     <ClCompile Include="Core\Device.cpp" />
     <ClCompile Include="Core\Framebuffer.cpp" />
     <ClCompile Include="Core\Image.cpp" />
@@ -178,6 +180,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Core\CommandBuffers.h" />
+    <ClInclude Include="Core\CommandPool.h" />
     <ClInclude Include="Core\Framebuffer.h" />
     <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
