--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -151,14 +151,18 @@
     <ClCompile Include="Core\CommandBuffers.cpp" />
     <ClCompile Include="Core\CommandPool.cpp" />
     <ClCompile Include="Core\Device.cpp" />
+    <ClCompile Include="Core\Fence.cpp" />
     <ClCompile Include="Core\Framebuffer.cpp" />
     <ClCompile Include="Core\Image.cpp" />
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\Pipeline.cpp" />
+    <ClCompile Include="Core\Renderer.cpp" />
     <ClCompile Include="Core\RenderPass.cpp" />
+    <ClCompile Include="Core\Semaphore.cpp" />
     <ClCompile Include="Core\Shader.cpp" />
     <ClCompile Include="Core\ShaderModule.cpp" />
+    <ClCompile Include="Core\VertexLayout.cpp" />
     <ClCompile Include="libHelper.cpp" />
     <ClCompile Include="Core\PhysicalDevice.cpp" />
     <ClCompile Include="Core\SwapChainSupport.cpp" />
@@ -182,14 +186,18 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Core\CommandBuffers.h" />
     <ClInclude Include="Core\CommandPool.h" />
+    <ClInclude Include="Core\Fence.h" />
     <ClInclude Include="Core\Framebuffer.h" />
     <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Pipeline.h" />
+    <ClInclude Include="Core\Renderer.h" />
     <ClInclude Include="Core\RenderPass.h" />
+    <ClInclude Include="Core\Semaphore.h" />
     <ClInclude Include="Core\Shader.h" />
     <ClInclude Include="Core\ShaderModule.h" />
     <ClInclude Include="Core\Swapchain.h" />
+    <ClInclude Include="Core\VertexLayout.h" />
     <ClInclude Include="Objects\Object.h" />
     <ClInclude Include="WindowApplication.h" />
     <ClInclude Include="Core\Device.h" />
