updaing pipeline layout for ub

--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Core\Buffer.cpp" />
     <ClCompile Include="Core\CommandBuffers.cpp" />
     <ClCompile Include="Core\CommandPool.cpp" />
+    <ClCompile Include="Core\DescriptorSetLayout.cpp" />
     <ClCompile Include="Core\Device.cpp" />
     <ClCompile Include="Core\DeviceMemory.cpp" />
     <ClCompile Include="Core\Fence.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="Core\Buffer.h" />
     <ClInclude Include="Core\CommandBuffers.h" />
     <ClInclude Include="Core\CommandPool.h" />
+    <ClInclude Include="Core\DescriptorSetLayout.h" />
     <ClInclude Include="Core\DeviceMemory.h" />
     <ClInclude Include="Core\Fence.h" />
     <ClInclude Include="Core\Framebuffer.h" />
