--- a/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanDemo/VulkanEngine/VulkanEngine.vcxproj
@@ -161,10 +161,12 @@
     <ClCompile Include="Core\Image.cpp" />
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
+    <ClCompile Include="Core\Mesh.cpp" />
     <ClCompile Include="Core\Pipeline.cpp" />
     <ClCompile Include="Core\PipelineLayout.cpp" />
     <ClCompile Include="Core\Renderer.cpp" />
     <ClCompile Include="Core\RenderPass.cpp" />
+    <ClCompile Include="Core\Sampler.cpp" />
     <ClCompile Include="Core\ScopedOneTimeCommandBuffer.cpp" />
     <ClCompile Include="Core\Semaphore.cpp" />
     <ClCompile Include="Core\Shader.cpp" />
@@ -202,10 +204,13 @@
     <ClInclude Include="Core\Framebuffer.h" />
     <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
+    <ClInclude Include="Core\Material.h" />
+    <ClInclude Include="Core\Mesh.h" />
     <ClInclude Include="Core\Pipeline.h" />
     <ClInclude Include="Core\PipelineLayout.h" />
     <ClInclude Include="Core\Renderer.h" />
     <ClInclude Include="Core\RenderPass.h" />
+    <ClInclude Include="Core\Sampler.h" />
     <ClInclude Include="Core\ScopedOneTimeCommandBuffer.h" />
     <ClInclude Include="Core\Semaphore.h" />
     <ClInclude Include="Core\Shader.h" />
